--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ label[for="form"]{
     border-right: 1px solid rgba(0, 0, 0, 0.166);
     padding-right: 80px;
     align-items: center;
+    text-decoration: none;
     
 }
 .testez{
@@ -62,7 +63,84 @@ label[for="form"]{
     margin-left: 60px;
 }
 
-h1{
+.h1{
     display: flex;
     justify-content: center;
+    font-size: 50px;
+}
+
+.hr1{
+   height: 1px;
+    background-color: purple;
+}
+
+
+
+.section2, .section3{
+    padding-left: 10%;
+    padding-right: 10%;
+    font-size: 1rem;
+    
+}
+ul li::marker {
+    color: purple;
+    
+}
+li{
+    padding: 10px;
+}
+.text{
+    color: rgba(0, 0, 0, 0.615);
+}
+
+footer{
+    background-color: #363636;
+    
+}
+footer>div{
+    display: flex;
+}
+
+.footerRS{
+    text-decoration: none;
+    color: white;
+    align-items: center;
+    justify-content: center;
+}
+
+.divlogoF{
+    align-content: center;
+    justify-content: center;
+    width: 120px;
+    height: 60px;
+
+}
+.footerRSL{
+    border-radius: 1px solid white;
+    text-decoration: none;
+    color: white;
+    align-items: center;
+    justify-content: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    border: 50% solid white;
+    border-radius: 50%;
+}
+
+.hr2{
+   color: rgba(255, 255, 255, 0.067);
+
+}
+.textN{
+    text-decoration: none;
+    color: black;
+}
+
+.section3{
+    padding-bottom: 30px;
+}
+.divCR{
+    justify-content: center;
+    align-items: center;
+    color: gray;
 }
