--- a/style.css
+++ b/style.css
@@ -95,6 +95,11 @@ li{
 
 footer{
     background-color: #363636;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
     
 }
 footer>div{
@@ -104,15 +109,19 @@ footer>div{
 .footerRS{
     text-decoration: none;
     color: white;
+    margin: 30px;
     align-items: center;
     justify-content: center;
 }
 
-.divlogoF{
-    align-content: center;
+.footerlogo{
+    align-items: center;
     justify-content: center;
     width: 120px;
     height: 60px;
+    display: flex;
+    padding-top: 20px;
+    padding-bottom: 20px;
 
 }
 .footerRSL{
@@ -123,10 +132,18 @@ footer>div{
     justify-content: center;
     padding-top: 40px;
     padding-bottom: 40px;
+    
     border: 50% solid white;
     border-radius: 50%;
 }
+footer>div{
+    gap: 50px;
+}
 
+i{
+     
+    padding-right: 10px;
+}
 .hr2{
    color: rgba(255, 255, 255, 0.067);
 
@@ -142,5 +159,6 @@ footer>div{
 .divCR{
     justify-content: center;
     align-items: center;
-    color: gray;
+    color: rgba(128, 128, 128, 0.386);
+    font-size: 10px;
 }
