--- a/style.css
+++ b/style.css
@@ -162,3 +162,8 @@ i{
     color: rgba(128, 128, 128, 0.386);
     font-size: 10px;
 }
+
+.divlogoF{
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
