--- a/style.css
+++ b/style.css
@@ -141,8 +141,9 @@ footer>div{
 }
 
 i{
-     
+    font-size: 30px;
     padding-right: 10px;
+    border-radius: 1px solid white;
 }
 .hr2{
    color: rgba(255, 255, 255, 0.067);
@@ -167,3 +168,4 @@ i{
     padding-top: 30px;
     padding-bottom: 30px;
 }
+
