--- a/style.css
+++ b/style.css
@@ -146,7 +146,11 @@ i{
     border-radius: 1px solid white;
 }
 .hr2{
-   color: rgba(255, 255, 255, 0.067);
+    border: 1px solid rgba(128, 128, 128, 0.231);
+   
+   width: 100%;
+   flex-direction: column-reverse;
+   
 
 }
 .textN{
