--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
 body{
     margin: 0;
     font-family: Montserrat;
+    
 }
 
-
+.rect{
+    clip: rect(auto, auto, 35px, auto);
+}
 header{
     background-color: #9b009d;
     display: flex;
     align-items: center;
+    
 }
 .imgH{
     width: 35px;
@@ -50,7 +54,21 @@ label[for="form"]{
     text-decoration: none;
     
 }
-.testez{
+.before{
+    position: relative;
+}
+
+.before::before {
+    content: "";
+    position: absolute;
+    bottom: -3px; 
+    left: 20;
+    width: 100%;
+    height: 2px; 
+    background-color: black;
+}
+
+    .testez{
     align-items: center;
     display: flex;
     margin-right: 30px;
@@ -58,8 +76,10 @@ label[for="form"]{
 }
 
 .imgN{
-    width: 180px;
-    height: 90px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 160px;
+    height: 80px;
     margin-left: 60px;
 }
 
